# fastapi-websocket

./: pyproject.toml
src/util/: socket_manager.py
