[tool.poetry]
name = "fastapi-websocket"
version = "0"
description = "FastAPI with WebSocket and Redis"
authors = ["weekwith.me <leedobby@weekwith.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
redis = "^3.5.3"
alembic = "^1.7.4"
SQLAlchemy = "^1.4.26"
python-dotenv = "^0.19.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
selenium = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
